# rhythmai

./: .env.example  .gitignore  LICENSE  README.md  README_ES.md  app.py  data_builder.py  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
rhythmai/: __init__.py  config.py
rhythmai/core/: __init__.py  deezer_client.py  embeddings.py  emotion_analyzer.py  music_recommender.py
rhythmai/memory/: __init__.py  context_manager.py  conversation_memory.py  user_profile.py
rhythmai/stores/: __init__.py  base_store.py  chroma_store.py  factory.py  faiss_store.py
rhythmai/utils/: __init__.py  security.py
scripts/: clear_db.py  clear_memory.py  populate_db.py
src/: config.py
src/core/: embeddings.py  emotion_analyzer.py  genre_detector.py  music_recommender.py  spotify_client.py  vector_db.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py  test_music_recommender.py  test_vector_store_benchmark.py
tests/unit/: __init__.py  test_embeddings.py  test_emotion_analyzer.py  test_security.py  test_vector_stores.py
