[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhythmai"
version = "2.0.0"
description = "Sistema de recomendación musical con inteligencia artificial y análisis emocional"
readme = "README.md"
authors = [
    {name = "César Sánchez Montes"},
    {name = "Miguel Ángel Campón Iglesias"},
    {name = "Nicolás Benito Benito"}
]
license = {text = "MIT"}
keywords = ["music", "recommendation", "ai", "emotion-analysis", "vector-database", "deezer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "sentence-transformers>=2.3.1",
    "transformers>=4.36.2",
    "torch>=2.1.2",
    "tokenizers>=0.15.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.3.2",
    "chromadb>=0.4.22",
    "hnswlib>=0.7.0",
    "pyarrow>=14.0.1",
    "faiss-cpu>=1.7.4",
    "pandas>=2.1.4",
    "tqdm>=4.66.1",
    "cryptography>=41.0.7",
    "pydantic>=2.5.3",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "pylint>=3.0.3",
    "flake8>=7.0.0",
    "mypy>=1.7.1",
    "isort>=5.13.2",
]

[project.urls]
Homepage = "https://github.com/cesarsm24/rhythmai"
Repository = "https://github.com/cesarsm24/rhythmai"

[tool.setuptools.packages.find]
where = ["."]
include = ["rhythmai*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | chroma_db
  | faiss_db
  | memory
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/chroma_db/*", "**/faiss_db/*", "**/memory/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "transformers.*",
    "chromadb.*",
    "faiss.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=rhythmai --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.pylint.main]
py-version = "3.9"
ignore = ["chroma_db", "faiss_db", "memory", ".git"]
jobs = 0

[tool.pylint.messages_control]
disable = [
    "C0111",
    "C0103",
    "R0913",
    "R0914",
    "W0212",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-locals = 20

[tool.coverage.run]
source = ["rhythmai"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/chroma_db/*",
    "*/faiss_db/*",
    "*/memory/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"